tests/bits-param/missing-param-value.stderr
error: encountered unsupported #[bitfield] attribute
 --> $DIR/missing-param-value.rs:3:12
  |
3 | #[bitfield(bits)]
  |            ^^^^
